--- a/Products/Kaspersky.html
+++ b/Products/Kaspersky.html
@@ -222,7 +222,7 @@
                   <span class="icon-bar"></span>
                 </button>
                 <a class="navbar-brand" href="../index.html"
-                  ><img src="../img/logo.png" alt=""
+                  ><img src="../img/logo2-nobg.png" alt=""
                 /></a>
               </div>
 
@@ -647,6 +647,18 @@
             </section>
           </section>
 
+          <div class="popup-overlay" id="popup-overlay">
+            <div class="popup-content">
+              <span class="close-btn" id="close-btn">&times;</span>
+              <!-- Embedded YouTube video -->
+              <iframe id="w-video" src="" frameborder="0" allowfullscreen></iframe>
+            </div>
+        </div>
+
+          <a href="../contact.html" class="contact-us-icon">
+            <i class='fa fa-paper-plane'></i>
+          </a>
+          
           <footer class="footer">
             <!-- Footer Widget Section -->
             <div class="footer-widget-section">
@@ -758,23 +770,19 @@
 
             <div class="copyright-section">
               <div class="container clearfix">
-                <span class="copytext"
-                  >&copy; Ikasi Solutions. All rights reserved. | Modified By:
-                  <a href="#">Crypto and Zukamime</a></span
-                >
+                  <span class="copytext">&copy; Ikasi Solutions. All rights reserved. | Created & Modified By: <a
+                      rel="noopener" target="_blank" href="https://zukamime03.github.io">ZUKAMIME </a>and<a href="#" rel="noopener" target="_blank"> CRYPTO</a></span>
 
-                <ul class="list-inline pull-right">
-                  <li><a href="../index.html">Home</a></li>
-                  <li><a href="../about.html">About</a></li>
-                  <li class="active">
-                    <a href="../services.html">Services</a>
-                  </li>
-                  <li><a href="../Blog.html">News</a></li>
-                  <li><a href="../contact.html">Contact</a></li>
-                </ul>
+                  <ul class="list-inline pull-right">
+                      <li><a href="../index.html">Home</a></li>
+                      <li><a href="../about.html">About</a></li>
+                      <li class="active"><a href="../services.html">Services</a></li>
+                      <li><a href="../Blog.html">News</a></li>
+                      <li><a href="../contact.html">Contact</a></li>
+                  </ul>
               </div>
               <!-- .container -->
-            </div>
+          </div>
             <!-- .copyright-section -->
           </footer>
           <!-- .footer -->
@@ -799,6 +807,7 @@
               <li><a href="../index.html">Home</a></li>
               <li><a href="../about.html">About</a></li>
               <li><a href="../services.html">Services</a></li>
+              <li><a href="Blog.html">News</a></li>
               <li><a href="../contact.html">Contact</a></li>
             </ul>
           </div>
