--- a/Products/Sophos.html
+++ b/Products/Sophos.html
@@ -168,6 +168,7 @@
         width: 46%;
         padding: 2%;
       }
+    
     </style>
 
 </head>
@@ -195,63 +196,65 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="../index.html"><img src="../img/logo.png" alt=""></a>
+            <a class="navbar-brand" href="../index.html"><img src="../img/logo-nobg.png" alt=""></a>
         </div>
 
 
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse" id="#navbar-collapse-1">
 
-            <ul class="nav navbar-nav navbar-right main-nav">
-                <li><a href="../index.html">Home</a></li>
-                <li><a href="../about.html">About</a></li>
-                <li class="active"><a href="../services.html">Services</a></li>
-                <li><a href="../contact.html">Contact</a></li>
-                <li><a href="../Blog.html">News</a></li>
-                <li class="dropdown m-menu-fw"><a href="#" data-toggle="dropdown" class="dropdown-toggle">Vendors
-                    <span><i class="fa fa-angle-down"></i></span></a>
-                    <ul class="dropdown-menu">
-                        <li>
+          <ul class="nav navbar-nav navbar-right main-nav">
+              <li ><a href="../index.html">Home</a></li>
+              <li><a href="../about.html">About</a></li>
+              <li><a class="active" href="../services.html">Services</a></li>
+              <li><a href="../contact.html">Contact</a></li>
+              <li><a href="../Blog.html">News</a></li>
+              <li class="dropdown m-menu-fw"><a href="#" data-toggle="dropdown"
+                      class="dropdown-toggle">Vendors
+                      <span><i class="fa fa-angle-down"></i></span></a>
+                  <ul class="dropdown-menu">
+                      <li>
                           <div class="m-menu-content">
-                            <ul class="col-sm-3">
-                                <li class="dropdown-header">Communication</li>
-                                <li><a href="#">Dell technologies</a></li>
-                                <li><a href="#">Hewlett Packard Enterprise</a></li>
-                                <li><a href="#">Solar winds</a></li>
-                                <li><a href="#">NetSheild</a></li>
-                                <li><a href="#">Huawei</a></li>
-                            </ul>
-                            <ul class="col-sm-3">
-                                <li class="dropdown-header">Cloud</li>
-                                <li><a href="#">SYNAQ</a></li>
-                                <li><a href="#">Adobe</a></li>
-                                <li><a href="#">Microsoft office 365</a></li>
-                                <li><a href="#">Huawei</a></li>
-                            </ul>
-                            <ul class="col-sm-3">
-                                <li class="dropdown-header">Security</li>
-                                <li><a href="Kaspersky.html">Kaspersky</a></li>
-                                <li><a href="Sophos.html">Sophos</a></li>
-                                <li><a href="#">CheckPoint</a></li>
-                                <li><a href="#">VeeAm</a></li>
-                                <li><a href="#">Huawei</a></li>
-                            </ul>
-                            <ul class="col-sm-3">
-                                <li class="dropdown-header">Networking</li>
-                                <li><a href="#">Sophos</a></li>
-                                <li><a href="#">Cisco</a></li>
-                                <li><a href="#">NetSheild</a></li>
-                                <li><a href="#">Solar winds</a></li>
-                                <li><a href="#">Huawei</a></li>
-                                <li><a href="#">Hewlett Packard Enterprise</a></li>
-                            </ul>
-                        </div>
-                        </li>
-                    </ul>
-                </li>
-            </ul>
+                              <ul class="col-sm-3">
+                                  <li class="dropdown-header">Communication</li>
+                                  <li><a class="popup-link" data-video-id="gRNPzs25pSY" href="#">Dell technologies</a></li>
+                                  <li><a class="popup-link" data-video-id="" href="#">Hewlett Packard Enterprise</a></li>
+                                  <li><a class="popup-link" data-video-id="" href="#">Solar winds</a></li>
+                                  <li><a class="popup-link" data-video-id="" href="#">NetSheild</a></li>
+                                  <li><a class="popup-link" data-video-id="" href="#">Huawei</a></li>
+                              </ul>
+                              <ul class="col-sm-3">
+                                  <li class="dropdown-header">Cloud</li>
+                                  <li><a class="popup-link" data-video-id="" href="#">SYNAQ</a></li>
+                                  <li><a class="popup-link" data-video-id="" href="#">Adobe</a></li>
+                                  <li><a class="popup-link" data-video-id="" href="#">Microsoft Office 365</a></li>
+                                  <li><a class="popup-link" data-video-id="" href="#">Huawei</a></li>
+                              </ul>
+                              <ul class="col-sm-3">
+                                  <li class="dropdown-header">Security</li>
+                                  <li><a href="./Kaspersky.html">Kaspersky</a></li>
+                                  <li><a href="./Sophos.html">Sophos</a></li>
+                                  <li><a class="popup-link" data-video-id="" href="#">CheckPoint</a></li>
+                                  <li><a class="popup-link" data-video-id="" href="#">Veeam</a></li>
+                                  <li><a class="popup-link" data-video-id="" href="#">Huawei</a></li>
+                              </ul>
+                              <ul class="col-sm-3">
+                                  <li class="dropdown-header">Networking</li>
+                                  <li><a href="./Sophos.html">Sophos</a></li>
+                                  <li><a class="popup-link" data-video-id="" href="#">Cisco</a></li>
+                                  <li><a class="popup-link" data-video-id="" href="#">NetSheild</a></li>
+                                  <li><a class="popup-link" data-video-id="" href="#">Solar winds</a></li>
+                                  <li><a class="popup-link" data-video-id="" href="#">Huawei</a></li>
+                                  <li><a class="popup-link" data-video-id="" href="#">Hewlett Packard Enterprise</a></li>
+                              </ul>
+                          </div>
+                      </li>
+                  </ul>
+              </li>
 
-        </div>
+          </ul>
+
+      </div>
         <!-- .navbar-collapse -->
     </div>
     <!-- .container -->
@@ -265,8 +268,18 @@
     </section>
 </section>
 
-<footer class="footer">
+<div class="popup-overlay" id="popup-overlay">
+  <div class="popup-content">
+    <span class="close-btn" id="close-btn">&times;</span>
+    <!-- Embedded YouTube video -->
+    <iframe id="w-video" src="" frameborder="0" allowfullscreen></iframe>
+  </div>
+</div>
 
+<a href="../contact.html" class="contact-us-icon">
+  <i class='fa fa-paper-plane'></i>
+</a>
+<footer class="footer">
     <!-- Footer Widget Section -->
     <div class="footer-widget-section">
         <div class="container text-center">
@@ -339,20 +352,20 @@
     <!-- /.Footer Widget Section -->
 
     <div class="copyright-section">
-        <div class="container clearfix">
-            <span class="copytext">&copy; Ikasi Solutions. All rights reserved. | Modified By: <a
-                    href="#">Crypto and Zukamime</a></span>
+      <div class="container clearfix">
+          <span class="copytext">&copy; Ikasi Solutions. All rights reserved. | Created & Modified By: <a
+              rel="noopener" target="_blank" href="https://zukamime03.github.io">ZUKAMIME </a>and<a href="#" rel="noopener" target="_blank"> CRYPTO</a></span>
 
-            <ul class="list-inline pull-right">
-                <li><a href="../index.html">Home</a></li>
-                <li><a href="../about.html">About</a></li>
-                <li class="active"><a href="../services.html">Services</a></li>
-                <li><a href="../Blog.html">News</a></li>
-                <li><a href="../contact.html">Contact</a></li>
-            </ul>
-        </div>
-        <!-- .container -->
-    </div>
+          <ul class="list-inline pull-right">
+              <li><a href="../index.html">Home</a></li>
+              <li><a href="../about.html">About</a></li>
+              <li class="active"><a href="../services.html">Services</a></li>
+              <li><a href="../Blog.html">News</a></li>
+              <li><a href="../contact.html">Contact</a></li>
+          </ul>
+      </div>
+      <!-- .container -->
+  </div>
     <!-- .copyright-section -->
 </footer>
 <!-- .footer -->
@@ -371,6 +384,7 @@
                 <li><a href="../index.html">Home</a></li>
                 <li><a href="../about.html">About</a></li>
                 <li><a href="../services.html">Services</a></li>
+                <li><a href="../Blog.html">News</a></li>
                 <li><a href="../contact.html">Contact</a></li>
             </ul>
         </div>
