--- a/blog.html
+++ b/blog.html
@@ -88,7 +88,7 @@
                                     <li><a href="./Products/Kaspersky.html">Kaspersky</a></li>
                                     <li><a href="#">Sophos</a></li>
                                     <li><a href="#">CheckPoint</a></li>
-                                    <li><a href="#">VeeAm</a></li>
+                                    <li><a href="#">Veeam</a></li>
                                     <li><a href="#">Huawei</a></li>
                                 </ul>
                                 <ul class="col-sm-3">
@@ -133,6 +133,13 @@
 
 </section>
 
+<div class="popup-overlay" id="popup-overlay">
+    <div class="popup-content">
+      <span class="close-btn" id="close-btn">&times;</span>
+      <!-- Embedded YouTube video -->
+      <iframe id="w-video" src="" frameborder="0" allowfullscreen></iframe>
+    </div>
+</div>
 
 <footer class="footer">
 
@@ -209,8 +216,8 @@
 
     <div class="copyright-section">
         <div class="container clearfix">
-            <span class="copytext">&copy; Ikasi Solutions. All rights reserved. | Modified By: <a
-                    href="#">Crypto and Zukamime</a></span>
+            <span class="copytext">&copy; Ikasi Solutions. All rights reserved. | Created & Modified By: <a
+                rel="noopener" target="_blank" href="https://zukamime03.github.io">ZUKAMIME </a>and<a href="#" rel="noopener" target="_blank"> CRYPTO</a></span>
 
             <ul class="list-inline pull-right">
                 <li><a href="index.html">Home</a></li>
@@ -240,6 +247,7 @@
                 <li><a href="index.html">Home</a></li>
                 <li><a href="about.html">About</a></li>
                 <li><a href="services.html">Services</a></li>
+                <li><a href="Blog.html">News</a></li>
                 <li><a href="contact.html">Contact</a></li>
             </ul>
         </div>
