--- a/contact.html
+++ b/contact.html
@@ -89,7 +89,7 @@
                                     <li><a href="./Products/Kaspersky.html">Kaspersky</a></li>
                                     <li><a href="#">Sophos</a></li>
                                     <li><a href="#">CheckPoint</a></li>
-                                    <li><a href="#">VeeAm</a></li>
+                                    <li><a href="#">Veeam</a></li>
                                     <li><a href="#">Huawei</a></li>
                                 </ul>
                                 <ul class="col-sm-3">
@@ -124,8 +124,14 @@
 
 <section class="contact-form ptb-100">
     <div class="container text-center">
-        <h2>Contact us below</h2>
-
+        <h2> Send an Email to <a href="mailto:Info@ikasisolutions.co.za">Info@ikasisolutions.co.za</a><br></h2>
+        <h2><br>OR Call<br</h2>
+        <p>
+            TEL: (011) 743-3001 or (011) 736-3582 <br>
+            ALT NO: 083 416 2645 <br>
+            FAX: 086 733 0583<br>
+        </p>    
+<!--
         <div class="row">
             <div class="col-md-8 col-md-offset-2">
                 <form>
@@ -156,12 +162,20 @@
                     </div>
                     <button type="submit" class="btn btn-primary">Send Message</button>
                 </form>
-            </div> 
+            </div> /.col-md-8 
         </div>
-
+-->
     </div>
 </section>
 <!-- .contact-form-->
+
+<div class="popup-overlay" id="popup-overlay">
+    <div class="popup-content">
+      <span class="close-btn" id="close-btn">&times;</span>
+      <!-- Embedded YouTube video -->
+      <iframe id="w-video" src="" frameborder="0" allowfullscreen></iframe>
+    </div>
+</div>
 
     <footer class="footer">
 
@@ -239,8 +253,8 @@
         <div class="copyright-section">
             <div class="container clearfix">
                 <span class="copytext">&copy; Ikasi Solutions. All rights reserved. | Created & Modified By: <a
-                        href="#">Crypto and Zukamime</a></span>
-    
+                    rel="noopener" target="_blank" href="https://zukamime03.github.io">ZUKAMIME </a>and<a href="#" rel="noopener" target="_blank"> CRYPTO</a></span>
+
                 <ul class="list-inline pull-right">
                     <li><a href="index.html">Home</a></li>
                     <li><a href="about.html">About</a></li>
@@ -269,6 +283,7 @@
                 <li><a href="index.html">Home</a></li>
                 <li><a href="about.html">About</a></li>
                 <li><a href="services.html">Services</a></li>
+                <li><a href="Blog.html">News</a></li>
                 <li><a href="contact.html">Contact</a></li>
             </ul>
         </div>
