--- a/index.html
+++ b/index.html
@@ -121,11 +121,7 @@
                 <!-- .nav -->
 
                 <div id="Ikasi-carousel" class="carousel slide hero-slide hidden-xs" data-ride="carousel">
-                    <!-- Indicators -->
-                    <ol class="carousel-indicators">
-                        <li data-target="#Ikasi-carousel" data-slide-to="0" class="active"></li>
-                    </ol>
-
+                   
                     <!-- Wrapper for slides -->
                     <div class="carousel-inner" role="listbox">
                         <div class="item active">
@@ -279,7 +275,7 @@
                     <div class="popup-content">
                       <span class="close-btn" id="close-btn">&times;</span>
                       <!-- Embedded YouTube video -->
-                      <iframe id="w-video" src="" frameborder="0" allowfullscreen></iframe>
+                      <iframe title="YouTube Video Information" id="w-video" src="" frameborder="0" allowfullscreen></iframe>
                     </div>
                 </div>
 
