--- a/services.html
+++ b/services.html
@@ -458,10 +458,10 @@
                         <div class="category">SECURITY</div>
                         <div class="category">CLOUD</div>
                     </div>
-                    <div class="content">
+                    <div class="vendor-content">
                         <div class="column">
                             <div class="img-container">
-                                <img src="./img/Vendors/sophos-logo-blue-rgb.png" alt="Sophos Platinum Partner">
+                                <img class="vendor-logo" src="./img/Vendors/sophos-logo-blue-rgb.png" alt="Sophos Platinum Partner">
                                 <div class="overlay">
                                   <ul>
                                     <li>Sophos Switches</li>
