Vendor Style Changes

--- a/services.html
+++ b/services.html
@@ -635,7 +635,9 @@
                             <div class="img-container">
                                 <img src="./img/Vendors/Microsoft-partner-logo.png" alt="Microsoft Partner">
                                 <div class="overlay">
-                                  Microsoft Office 365
+                                  <ul>
+                                    <li>Microsoft Office 365</li>
+                                  </ul>
                                 </div>
                             </div>
                             <div class="img-container">
@@ -656,7 +658,7 @@
             <div class="popup-content">
               <span class="close-btn" id="close-btn">&times;</span>
               <!-- Embedded YouTube video -->
-              <iframe id="w-video" src="" frameborder="0" allowfullscreen></iframe>
+              <iframe title="Embedded YouTube video" id="w-video" src="" frameborder="0" allowfullscreen></iframe>
             </div>
         </div>
 
@@ -743,11 +745,11 @@
                       rel="noopener" target="_blank" href="https://zukamime03.github.io">ZUKAMIME </a>and<a href="#" rel="noopener" target="_blank"> CRYPTO</a></span>
 
                   <ul class="list-inline pull-right">
-                      <li><a href="index.html">Home</a></li>
-                      <li><a href="about.html">About</a></li>
-                      <li class="active"><a href="services.html">Services</a></li>
-                      <li><a href="Blog.html">News</a></li>
-                      <li><a href="contact.html">Contact</a></li>
+                      <li><a href="./index.html">Home</a></li>
+                      <li><a href="./about.html">About</a></li>
+                      <li class="active"><a href="./services.html">Services</a></li>
+                      <li><a href="./Blog.html">News</a></li>
+                      <li><a href="./contact.html">Contact</a></li>
                   </ul>
               </div>
               <!-- .container -->
@@ -773,11 +775,11 @@
         <div>
           <div>
             <ul id="menu">
-              <li><a href="index.html">Home</a></li>
-              <li><a href="about.html">About</a></li>
-              <li><a href="services.html">Services</a></li>
-              <li><a href="Blog.html">News</a></li>
-              <li><a href="contact.html">Contact</a></li>
+              <li><a href="./index.html">Home</a></li>
+              <li><a href="./about.html">About</a></li>
+              <li><a href="./services.html">Services</a></li>
+              <li><a href="./Blog.html">News</a></li>
+              <li><a href="./contact.html">Contact</a></li>
             </ul>
           </div>
         </div>
