--- a/blog.html
+++ b/blog.html
@@ -127,7 +127,8 @@
             <h2 class="news-title" style="padding: 50px;text-align: center;">NEWS FROM SOPHOS</h2>
         </div>
         <div class="news-section">
-            <iframe style="height: 1300px;" title="News From Sophos" class="Sophos-news" src="https://partnerportal.sophos.com/en-us/microsite/newssync/full-page.aspx?partner_referral_id=0013000001A8cMK&partner_name=IKASI+SOLUTIONS+CC" width="1000" height="1150" style="border: none;" ></iframe>
+         <!--   <iframe style="height: 1300px;" title="News From Sophos" class="Sophos-news" src="https://partnerportal.sophos.com/en-us/microsite/newssync/full-page.aspx?partner_referral_id=0013000001A8cMK&partner_name=IKASI+SOLUTIONS+CC" width="1000" height="1150" style="border: none;" ></iframe>
+        -->
         </div>
     </section>
 
@@ -217,14 +218,14 @@
     <div class="copyright-section">
         <div class="container clearfix">
             <span class="copytext">&copy; Ikasi Solutions. All rights reserved. | Created & Modified By: <a
-                rel="noopener" target="_blank" href="https://zukamime03.github.io">ZUKAMIME </a>and<a href="#" rel="noopener" target="_blank"> CRYPTO</a></span>
+                rel="noopener" target="_blank" href="https://zukamime03.github.io">ZUKAMIME </a></span>
 
             <ul class="list-inline pull-right">
-                <li><a href="index.html">Home</a></li>
-                <li><a href="about.html">About</a></li>
-                <li><a href="services.html">Services</a></li>
-                <li class="active"><a href="Blog.html">News</a></li>
-                <li><a href="contact.html">Contact</a></li>
+                <li><a href="./index.html">Home</a></li>
+                <li><a href="./about.html">About</a></li>
+                <li><a href="./services.html">Services</a></li>
+                <li class="active"><a href="./Blog.html">News</a></li>
+                <li><a href="./contact.html">Contact</a></li>
             </ul>
         </div>
         <!-- .container -->
@@ -244,11 +245,11 @@
     <div>
         <div>
             <ul id="menu">
-                <li><a href="index.html">Home</a></li>
-                <li><a href="about.html">About</a></li>
-                <li><a href="services.html">Services</a></li>
-                <li><a href="Blog.html">News</a></li>
-                <li><a href="contact.html">Contact</a></li>
+                <li><a href="./index.html">Home</a></li>
+                <li><a href="./about.html">About</a></li>
+                <li><a href="./services.html">Services</a></li>
+                <li><a href="./Blog.html">News</a></li>
+                <li><a href="./contact.html">Contact</a></li>
             </ul>
         </div>
     </div>
