--- a/services.html
+++ b/services.html
@@ -174,7 +174,7 @@
                 <div class="col-sm-6 col-md-3">
                   <div class="promo-block-wrapper clearfix">
                     <div class="promo-icon">
-                      <img title="communication mini icon" src="./img/com-mini.jpg" class="mini-icon">
+                      <img title="communication mini icon" src="./img/com-mini.png" class="mini-icon">
                     </div>
                     <div class="promo-content">
                       <h3>Communication</h3>
