--- a/index.html
+++ b/index.html
@@ -21,13 +21,7 @@
     <!-- Style CSS -->
     <link href="css/style.css" rel="stylesheet">
     <link rel="icon" href="./img/ikasi_logo.png" type="image/x-icon">
-
-    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-    <!--[if lt IE 9]>
-    <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
-    <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-    <![endif]-->
+   
 </head>
 
 <body>
@@ -92,7 +86,7 @@
                                                     <li><a href="./Products/Kaspersky.html">Kaspersky</a></li>
                                                     <li><a href="./Products/Sophos.html">Sophos</a></li>
                                                     <li><a class="popup-link" data-video-id="O74W9BB0gGI" href="#">CheckPoint</a></li>
-                                                    <li><a class="popup-link" data-video-id="MnAl5acI2Nk" href="#">Veeam</a></li>
+                                                    <li><a href="./Products/veeam.html">Veeam</a></li>
                                                     <li><a class="popup-link" data-video-id="l47aHiyRXqI" href="#">Huawei</a></li>
                                                 </ul>
                                                 <ul class="col-sm-3">
@@ -260,6 +254,7 @@
                     <div class="gallery">
                         <img src="./img/Kaspersky-banner.png" alt="Image 1">
                         <img src="./img/sophos-banner.png" alt="Image 2">
+                        <img src="./img/Kaspersky banner upskilled.png" alt="image 3">
                     </div>
                     <button class="prev" onclick="prevSlide()">&#10094;</button>
                     <button class="next" onclick="nextSlide()">&#10095;</button>
@@ -430,6 +425,10 @@
     <script src="js/scripts.js"></script>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 
+      <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
+    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+    <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
+    <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
 </body>
 
 </html>
